[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "This is an URL shortener power by FastAPI."
authors = ["miohitokiri5474 <lltzpp>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.1.1"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
